Add activity for Lemonade with images and text

--- a/HappyBirthday/app/src/main/AndroidManifest.xml
+++ b/HappyBirthday/app/src/main/AndroidManifest.xml
@@ -20,6 +20,23 @@
         <activity
             android:name=".DiceRollActivity"
             android:exported="true">
+
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Debugging"
+            android:exported="true">
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Lemonade"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
