Change name of project and addTipTimeActivity

--- a/HappyBirthday/app/src/main/AndroidManifest.xml
+++ b/HappyBirthday/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.HappyBirthday"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".unit1.MainActivity"
             android:exported="true">
 
         </activity>
@@ -36,6 +36,16 @@
         </activity>
         <activity
             android:name=".Lemonade"
+            android:exported="true">
+
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
+            android:name=".TipTimeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
