--- a/HappyBirthday/app/build.gradle
+++ b/HappyBirthday/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.happybirthday'
+    namespace 'com.example.kotlincourse'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.happybirthday"
+        applicationId "com.example.kotlincourse"
         minSdk 19
         targetSdk 32
         versionCode 1
@@ -29,6 +29,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+        viewBinding = true
     }
 }
 
