--- a/HappyBirthday/app/build.gradle
+++ b/HappyBirthday/app/build.gradle
@@ -5,12 +5,15 @@ plugins {
 
 android {
     namespace 'com.example.kotlincourse'
-    compileSdk 32
+    compileSdk 33
+
+    testOptions {
+        unitTests.returnDefaultValues = true}
 
     defaultConfig {
         applicationId "com.example.kotlincourse"
         minSdk 19
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -39,13 +42,20 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.material:material:<version>'
-
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+//    testImplementation 'org.mockito:mockito-all:4.8.0'
+    testImplementation "org.mockito:mockito-core:4.8.1"
+    // Optional -- mockito-kotlin
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.8.1"
+    // Optional -- Mockk framework
+    testImplementation "io.mockk:mockk:4.8.1"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.8.1"
 }
